k8s/json-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-server-service
  namespace: financial-app
  labels:
    app: json-server
spec:
  selector:
    app: json-server
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  type: ClusterIP
